@@ -307,6 +307,20 @@ argument_list|,
 literal|false
 argument_list|)
 block|,
+name|COMPRESSINTERMEDIATECODEC
+argument_list|(
+literal|"hive.intermediate.compression.codec"
+argument_list|,
+literal|""
+argument_list|)
+block|,
+name|COMPRESSINTERMEDIATETYPE
+argument_list|(
+literal|"hive.intermediate.compression.type"
+argument_list|,
+literal|""
+argument_list|)
+block|,
 name|BYTESPERREDUCER
 argument_list|(
 literal|"hive.exec.reducers.bytes.per.reducer"
