@@ -279,9 +279,85 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|io
+operator|.
+name|SequenceFile
+operator|.
+name|CompressionType
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|compress
+operator|.
+name|CompressionCodec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|compress
+operator|.
+name|LzoCodec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|FileOutputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|mapred
 operator|.
 name|JobConf
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|SequenceFileOutputFormat
 import|;
 end_import
 
@@ -764,11 +840,135 @@ operator|.
 name|getTableInfo
 argument_list|()
 decl_stmt|;
+name|JobConf
+name|jc_output
+init|=
+name|jc
+decl_stmt|;
+if|if
+condition|(
+name|isCompressed
+condition|)
+block|{
+name|jc_output
+operator|=
+operator|new
+name|JobConf
+argument_list|(
+name|jc
+argument_list|)
+expr_stmt|;
+name|String
+name|codecStr
+init|=
+name|conf
+operator|.
+name|getCompressCodec
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|codecStr
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|codecStr
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|""
+argument_list|)
+condition|)
+block|{
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|CompressionCodec
+argument_list|>
+name|codec
+init|=
+operator|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|CompressionCodec
+argument_list|>
+operator|)
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|codecStr
+argument_list|)
+decl_stmt|;
+name|FileOutputFormat
+operator|.
+name|setOutputCompressorClass
+argument_list|(
+name|jc_output
+argument_list|,
+name|codec
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|type
+init|=
+name|conf
+operator|.
+name|getCompressType
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|type
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|type
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|""
+argument_list|)
+condition|)
+block|{
+name|CompressionType
+name|style
+init|=
+name|CompressionType
+operator|.
+name|valueOf
+argument_list|(
+name|type
+argument_list|)
+decl_stmt|;
+name|SequenceFileOutputFormat
+operator|.
+name|setOutputCompressionType
+argument_list|(
+name|jc
+argument_list|,
+name|style
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|outWriter
 operator|=
 name|getRecordWriter
 argument_list|(
-name|jc
+name|jc_output
 argument_list|,
 name|hiveOutputFormat
 argument_list|,
