@@ -4235,6 +4235,80 @@ argument_list|)
 argument_list|)
 decl_stmt|;
 comment|// Create a file sink operator for this file name
+name|boolean
+name|compressIntermediate
+init|=
+name|parseCtx
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getBoolVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|COMPRESSINTERMEDIATE
+argument_list|)
+decl_stmt|;
+name|fileSinkDesc
+name|desc
+init|=
+operator|new
+name|fileSinkDesc
+argument_list|(
+name|taskTmpDir
+argument_list|,
+name|tt_desc
+argument_list|,
+name|compressIntermediate
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|compressIntermediate
+condition|)
+block|{
+name|desc
+operator|.
+name|setCompressCodec
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|COMPRESSINTERMEDIATECODEC
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|desc
+operator|.
+name|setCompressType
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|COMPRESSINTERMEDIATETYPE
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|Operator
 argument_list|<
 name|?
@@ -4249,27 +4323,7 @@ name|OperatorFactory
 operator|.
 name|get
 argument_list|(
-operator|new
-name|fileSinkDesc
-argument_list|(
-name|taskTmpDir
-argument_list|,
-name|tt_desc
-argument_list|,
-name|parseCtx
-operator|.
-name|getConf
-argument_list|()
-operator|.
-name|getBoolVar
-argument_list|(
-name|HiveConf
-operator|.
-name|ConfVars
-operator|.
-name|COMPRESSINTERMEDIATE
-argument_list|)
-argument_list|)
+name|desc
 argument_list|,
 name|parent
 operator|.
