@@ -67,6 +67,14 @@ specifier|private
 name|int
 name|destTableId
 decl_stmt|;
+specifier|private
+name|String
+name|compressCodec
+decl_stmt|;
+specifier|private
+name|String
+name|compressType
+decl_stmt|;
 specifier|public
 name|fileSinkDesc
 parameter_list|()
@@ -288,6 +296,54 @@ operator|.
 name|destTableId
 operator|=
 name|destTableId
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getCompressCodec
+parameter_list|()
+block|{
+return|return
+name|compressCodec
+return|;
+block|}
+specifier|public
+name|void
+name|setCompressCodec
+parameter_list|(
+name|String
+name|intermediateCompressorCodec
+parameter_list|)
+block|{
+name|this
+operator|.
+name|compressCodec
+operator|=
+name|intermediateCompressorCodec
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getCompressType
+parameter_list|()
+block|{
+return|return
+name|compressType
+return|;
+block|}
+specifier|public
+name|void
+name|setCompressType
+parameter_list|(
+name|String
+name|intermediateCompressType
+parameter_list|)
+block|{
+name|this
+operator|.
+name|compressType
+operator|=
+name|intermediateCompressType
 expr_stmt|;
 block|}
 block|}
